[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit"
version = "0.0.1"
dependencies = []
authors = [
  { name="shuffle"},
]
description = "Commonly used utility functions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]